2006-05-24  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppatheditor.[ch]: renamed a parameter, updated
	gtk-doc comment.

2006-05-24  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpfileentry.c: use GTK_STOCK_OPEN instead of
	"..."  to label the "Browse" button. This makes the widget more
	similar to the GtkFileChooserButton and addresses bug #342749.

2006-05-24  Michael Natterer  <mitch@gimp.org>

	* app/pdb/gimppdb.c (gimp_pdb_real_register_procedure)
	(gimp_pdb_real_unregister_procedure): use g_hash_table_replace()
	instead of g_hash_table_insert() and make sure the used key is
	always the name of the first procedure in the list.
	Fixes bug #342578.
	
	(It's actually a miracle that only the PDB browser crashed, and
	not GIMP, since we were using pointers to g_free()'d memory as
	keys when different plug-ins registered procedures with the same
	name)

2006-05-23  Sven Neumann  <sven@gimp.org>

	* configure.in: improved output for missing libasound.

2006-05-23  Michael Natterer  <mitch@gimp.org>

	Fix for bug #333156:

	* app/paint-funcs/paint-funcs-types.h (enum CombinationMode):
	added value COMBINE_INTEN_A_INDEXED.

	* app/paint-funcs/paint-funcs.c
	(combine_inten_a_and_indexed_pixels): new function which
	implements the new CombinationMode.

	(combine_sub_region)
	(combine_regions): added the needed bits to call the new function.

	* app/core/gimpprojection-construct.c (project_indexed): added
	mask PixelRegion parameter since that's supported by paint-funcs
	now, replaced g_warning() about unimplemented combine type
	by call to combine_regions(..., COMBINE_INTEN_A_INDEXED).

	(gimp_projection_construct_layers): pass the mask to
	project_indexed() and removed comments about not supporting it.

2006-05-23  Karine Delvare  <edhel@gimp.org>

	* app/core/gimpcontext.c
	* app/tools/gimp-tools.c
	* app/tools/gimpnewrectselecttool.c
	* app/tools/gimprectselecttool.c
	* app/widgets/gimptoolbox.c