@@ -1,5 +1,5 @@
 GIMP Palette
-Name: Tango Icon Theme Palette
+Name: Tango Icon Theme
 Columns: 3
 #
 252 233  79	Butter 1
